# duffy

./: .coveragerc  .gitignore  AUTHORS.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE  README.md  README.rst  cico_build.sh  cico_test.sh  documentation.txt  duffy-dispatch.service  duffy-worker@.service  init.py  pyproject.toml  renovate.json  requirements.txt  run.py  setup.py  test_requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yaml
ansible/: create-tenant.yml  deploy-duffy-single-node.yml  update-tenant.yml
ansible/inventory/: hosts.yml
ansible/roles/duffy/defaults/: main.yml
ansible/roles/duffy/handlers/: main.yml
ansible/roles/duffy/tasks/: main.yml  selinux.yml
ansible/roles/duffy/templates/: duffy.sh.j2  local-duffy.te.j2
ansible/roles/duffy/templates/config/: 10_app.yaml.j2  20_metaclient.yaml.j2  30_logging.yaml.j2  40_tasks.yaml.j2  50_database.yaml.j2  60_defaults.yaml.j2  60_misc.yaml.j2  70_nodepools.yaml.j2  80_secrets.yaml.j2
ansible/roles/duffy/templates/systemd/: duffy-app.service.j2  duffy-metaclient.service.j2  duffy-tasks.service.j2  duffy.sysconfig.j2
ansible/roles/duffy/vars/: CentOS-8.yml
ansible/roles/postgresql/client/defaults/: main.yml
ansible/roles/postgresql/client/tasks/: main.yml
ansible/roles/postgresql/server/defaults/: main.yml
ansible/roles/postgresql/server/tasks/: main.yml
ansible/roles/redis/tasks/: main.yml
developer-docs/: README.md  duffy-components.drawio  duffy-db-models.drawio  duffy-node-states.drawio
docs/: api.md  arch.md  types.md
duffy/: __init__.py  admin.py  api.py  app.py  cli.py  config.py  configuration.py  data.py  database.py  exceptions.py  extensions.py  misc.py  shell.py  tasks.py  util.py  version.py  worker.py
duffy/api_models/: __init__.py  chassis.py  common.py  node.py  pool.py  project.py  session.py  tenant.py
duffy/api_v1/: __init__.py  views.py
duffy/api_v2/: __init__.py  views.py
duffy/app/: auth.py  cli.py  database.py  logging.py  main.py  middleware.py  util.py
duffy/app/controllers/: __init__.py  auth.py  chassis.py  node.py  pool.py  project.py  session.py  tenant.py
duffy/client/: __init__.py  formatter.py  main.py
duffy/configuration/: __init__.py  main.py  validation.py
duffy/database/: __init__.py  model.py  setup.py  types.py  util.py
duffy/database/migrations/: env.py  main.py  script.py.mako
duffy/database/migrations/versions/: 36cf064c0481_ignore_failed_nodes_in_unique_indexes.py  6654d536b836_add_node_state_sessionnode_session_id_.py  ce2e575cb800_add_tenant_session_lifetimes.py
duffy/database/model/: __init__.py  node.py  project.py  session.py  tenant.py
duffy/legacy/: auth.py  main.py
duffy/models/: __init__.py  baremetal_nodes.py  nodes.py  opennebula_nodes.py  openstack_nodes.py  pools.py
duffy/nodes/: context.py  pools.py
duffy/nodes/mechanisms/: ansible.py  main.py
duffy/tasks/: __init__.py  base.py  deprovision.py  expire.py  locking.py  main.py  node_pools.py  provision.py
duffy/tasks/mechanisms/: __init__.py  ansible.py  main.py
duffy/types/: README.md
duffy/types/metal/: inventory.py
duffy/types/seamicro/: views.py
duffy/types/seamicro/templates/: seamicro-centos-7-ks.j2
etc/: duffy-example-config.yaml
etc/systemd/system/: duffy-app.service  duffy-metaclient.service  duffy-tasks.service
migrations/versions/: .688abba1b8da_.py.swp  0dbead04ed33_.py  1023d405677d_.py  32128426d4b5_initial_db.py  41eed8ffdefc_.py  688abba1b8da_.py  8ac110f4ffce_.py  982f206aff28_.py  adad9ab20b29_.py  bb1e6f5b121a_add_a_flavor_column_to_the_hosts.py
scripts/: duffy  import_csv.py  set_next_state.py  status.py  worker.py
scripts/openstack_scripts/: connect.py  set_config.py
src/: reaper.py
src/duffy/: __init__.py  main.py
src/duffy/api/: api.py  test_api.py
src/duffy/models/: __init__.py
src/duffy/utils/: utils.py
tests/: conftest.py  test_admin.py  test_cli.py  test_configuration.py  test_legacy.py  test_misc.py  test_nodes_context.py  test_shell.py  test_tasks.py  test_util.py  test_v1_api.py  test_version.py  util.py
tests/app/: conftest.py  test_auth.py  test_cli.py  test_database.py  test_logging.py  test_main.py  test_middleware.py  test_util.py
tests/app/controllers/: __init__.py  test_chassis.py  test_node.py  test_pool.py  test_project.py  test_session.py  test_tenant.py
tests/client/: test_formatters.py  test_main.py
tests/database/: conftest.py  test___init__.py  test_migrations.py  test_model.py  test_package.py  test_setup.py  test_util.py
tests/duffy/: test_version.py
tests/duffy/app/: test_main.py
tests/fixtures/: test_db_test_data.py
tests/nodes/: test_context.py  test_mechanisms.py  test_pools.py
tests/tasks/: test_base.py  test_deprovision.py  test_expire.py  test_locking.py  test_main.py  test_mechanisms.py  test_node_pools.py  test_provision.py
tests/tasks/playbooks/: deprovision.yml  provision.yml
types/metal/: config.yaml  destroy.py  provision.py
