[tool.poetry]
name = "duffy"
version = "3.3.7"
description = "CentOS CI provisioner"
authors = ["Nils Philippsen <nils@redhat.com>", "Vipul Siddharth <siddharthvipul1@gmail.com>", "Akashdeep Dhar <akashdeep@redhat.com>", "Ben Capper <bcapper@redhat.com>"]
license = "MIT"
maintainers = ["Nils Philippsen <nils@redhat.com>", "Vipul Siddharth <siddharthvipul1@gmail.com>", "Akashdeep Dhar <akashdeep@redhat.com>", "Ben Capper <bcapper@redhat.com>"]
readme = "README.md"
homepage = "https://github.com/CentOS/duffy"
repository = "https://github.com/CentOS/duffy"
documentation = "https://github.com/CentOS/duffy/wiki"
keywords = ["baremetal", "ci", "vm", "opennebula", "centos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Ansible",
    "Framework :: AsyncIO",
    "Framework :: Celery",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Operating System",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
PyYAML = "^6"
SQLAlchemy = {version = "^2.0.5", extras=["asyncio"], optional = true}
alembic = {version = "^1.7.5", optional = true}
bcrypt = {version = "^3.2 || ^4", optional = true}
fastapi = {version = ">=0.70, <2", optional = true}
uvicorn = {version = ">=0.15, <2", optional = true}
Jinja2 = {version = "^3.0.3", optional = true}
ansible-runner = {version = "^2.1.1", optional = true}
asyncpg = {version = ">=0.25, <2", optional = true}
celery = {version = "^5.2.1", extras = ["redis"], optional = true}
httpx = {version = ">=0.18.2, <2", optional = true}
ipython = {version = ">=7.29", optional = true}
jmespath = {version = ">=0.10, <2", optional = true}
pottery = {version = "^3", optional = true}
psycopg2 = {version = "^2.9.2", optional = true}
aiodns = {version = "^3.0.0", optional = true}
pydantic = ">=1.6.2"
aiosqlite = {version = ">=0.17.0, <2", optional = true}
pyxdg = ">=0.27, <2"

[tool.poetry.dev-dependencies]
Jinja2 = "^3.0.3"
ansible = "^5.2 || ^6 || ^7.0.0 || ^8.0.0"
ansible-core = "^2.12.1"
ansible-runner = "^2.1.1"
black = ">=21.9b0"
flake8 = ">=3.9.2"
httpx = ">=0.18.2, <2"
isort = "^5.9.3"
jmespath = ">=0.10, <2"
poetry = "^1.2.0"
pottery = "^3"
pytest = ">=6.2.5"
pytest-asyncio = ">=0.17, <2"
pytest-black = ">=0.3.12, <2"
pytest-cov = "^3 || ^4"
pytest-isort = ">=2"
tox = "^3.24.4 || ^4.0.0"
psycopg = "^3.0.16"
pytest-postgresql = "^4.1.1 || ^5.0.0"
coverage-conditional-plugin = "^0.8.0 || ^0.9.0"

[tool.poetry.extras]
# the `serve` command
app = [
    "SQLAlchemy", "alembic", "bcrypt", "fastapi", "uvicorn",
    "aiodns", "ansible-runner", "Jinja2", "jmespath", "pottery", "celery",
]
# the `admin ...` commands
admin = ["SQLAlchemy", "bcrypt", "fastapi"]
# the `setup-db` and `migration` commands
database = ["SQLAlchemy", "alembic", "bcrypt"]
# the `dev-shell` command
dev-shell = ["ipython", "SQLAlchemy", "alembic", "bcrypt"]
# the `serve` and `dev-shell` commands, if you use SQLite
sqlite = ["aiosqlite"]
# the `serve`, `worker` and `dev-shell` commands, if you use PostgreSQL
postgresql = ["psycopg2", "asyncpg"]
# the `worker` command
tasks = ["aiodns", "ansible-runner", "Jinja2", "jmespath", "pottery", "celery"]
# the `serve-legacy` command
legacy = ["httpx", "Jinja2"]
# the `client ...` commands
client = ["httpx"]

[tool.pytest.ini_options]
addopts = "--black --cov-config .coveragerc --cov=duffy --cov-report term --cov-report xml --cov-report html --isort"
asyncio_mode = "auto"

[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
duffy = "duffy.cli:cli"
